--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,10 @@ pandas>=1.3.0
 
 # HTTP Client
 requests>=2.26.0
+beautifulsoup4>=4.9.0
+
+# Embeddings Generation (Required for buildfaiss.py)
+sentence-transformers>=2.2.0
 
 # Vector Similarity Search (Optional - choose CPU or GPU version)
 # For CPU-only systems:
